Correct z-index to display over floating buttons

--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -6,7 +6,6 @@
   width: 100vw;
   max-height: 100vh;
   transform: none;
-  z-index: 1;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(auto, 1fr);
@@ -19,7 +18,7 @@
   padding-top: calc(var(--header-height) * 1.25);
   transition: transform 500ms ease;
   pointer-events: none;
-  z-index: 1;
+  z-index: 3;
   will-change: transition, opacity, background-color;
 }
 #menu small {
